--- a/.github/workflows/bookdown.yml
+++ b/.github/workflows/bookdown.yml
@@ -1,23 +1,40 @@
-name: Build and Deploy
-on: [push]
+# This is a basic workflow to help you get started with Actions
+
+name: bookdown
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+  #push:
+    #branches: [ master ]
+    #paths:
+    #- '**.md'
+  pull_request:
+    branches: [gh-pages]
+  
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  bookdown:
+    name: Render-Book
+    runs-on: macOS-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+      - uses: actions/checkout@v2
         with:
-          persist-credentials: false
-
-      #- name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-       # run: |
-        #  npm install
-        #  npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+          ref: gh-pages
+      - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-pandoc@v1
+      - name: Install rmarkdown
+        run: Rscript -e 'install.packages(c("rmarkdown","bookdown","HelpersMG","readr"))'
+        
+      - uses: r-lib/actions/setup-tinytex@v1
+      - name : install tinytex
+        run: tlmgr --version
+    
+      - name: Render Book
+        run: |
+             Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::epub_book", output_dir="docs")'
+             Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::word_document2", output_dir="docs")'
+             Rscript -e 'bookdown::render_book("index.Rmd", "bookdown::gitbook", output_dir="docs")'
+      - uses: actions/upload-artifact@v1
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: docs # The folder the action should deploy.
-          CLEAN: true # Automatically remove deleted files from the deploy branch
+          name: docs
+          path: docs/
